--- a/translations/oe_corporate_blocks-de.po
+++ b/translations/oe_corporate_blocks-de.po
@@ -1,23 +1,17 @@
 msgid ""
 msgstr ""
 
-msgid "https://europa.eu/european-union/contact/call-us_en"
-msgstr "https://europa.eu/european-union/contact/call-us_de"
+msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
+msgstr "Rufen Sie uns an unter <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
-msgid "telephone options"
-msgstr "einer anderen Nummer an"
+msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
+msgstr "Rufen Sie uns unter <a href=\"https://europa.eu/european-union/contact/call-us_de\">einer anderen Nummer an</a>"
 
-msgid "https://europa.eu/european-union/contact/write-to-us_en"
-msgstr "https://europa.eu/european-union/contact/write-to-us_de"
+msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
+msgstr "Schreiben Sie uns (<a href=\"https://europa.eu/european-union/contact/write-to-us_de\">Kontaktformular</a>)"
 
-msgid "contact form"
-msgstr "Kontaktformular"
-
-msgid "https://europa.eu/european-union/contact/meet-us_en"
-msgstr "https://europa.eu/european-union/contact/meet-us_de"
-
-msgid "local EU office"
-msgstr "EU-Büros vor Ort"
+msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
+msgstr "Kommen Sie in einem unserer <a href=\"https://europa.eu/european-union/contact/meet-us_de\">EU-Büros vor Ort</a> vorbei"
 
 msgid "Search for EU social media channels"
 msgstr "EU in den sozialen Medien"
