--- a/translations/oe_corporate_blocks-et.po
+++ b/translations/oe_corporate_blocks-et.po
@@ -1,23 +1,17 @@
 msgid ""
 msgstr ""
 
-msgid "https://europa.eu/european-union/contact/call-us_en"
-msgstr "https://europa.eu/european-union/contact/call-us_et"
+msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
+msgstr "Helistage meile <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
-msgid "telephone options"
-msgstr "helistamisvõimalusi"
+msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
+msgstr "Kasutage ka muid <a href=\"https://europa.eu/european-union/contact/call-us_et\">helistamisvõimalusi</a>"
 
-msgid "https://europa.eu/european-union/contact/write-to-us_en"
-msgstr "https://europa.eu/european-union/contact/write-to-us_et"
+msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
+msgstr "Kirjutage meile <a href=\"https://europa.eu/european-union/contact/write-to-us_et\">kontaktvormi vahendusel</a>"
 
-msgid "contact form"
-msgstr "kontaktvormi vahendusel"
-
-msgid "https://europa.eu/european-union/contact/meet-us_en"
-msgstr "https://europa.eu/european-union/contact/meet-us_et"
-
-msgid "local EU office"
-msgstr "kohalikus ELi esinduses"
+msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
+msgstr "Külastage meid <a href=\"https://europa.eu/european-union/contact/meet-us_et\">kohalikus ELi esinduses</a>"
 
 msgid "Search for EU social media channels"
 msgstr "Kasutage ELi sotsiaalmeedia kanaleid"
