--- a/translations/oe_corporate_blocks-lt.po
+++ b/translations/oe_corporate_blocks-lt.po
@@ -1,23 +1,17 @@
 msgid ""
 msgstr ""
 
-msgid "https://europa.eu/european-union/contact/call-us_en"
-msgstr "https://europa.eu/european-union/contact/call-us_lt"
+msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
+msgstr "Skambinkite mums telefonu <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
-msgid "telephone options"
-msgstr "telefoninio ryšio"
+msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
+msgstr "Pasinaudokite kitomis <a href=\"https://europa.eu/european-union/contact/call-us_lt\">telefoninio ryšio</a> galimybėmis"
 
-msgid "https://europa.eu/european-union/contact/write-to-us_en"
-msgstr "https://europa.eu/european-union/contact/write-to-us_lt"
+msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
+msgstr "Rašykite e. paštu naudodamiesi <a href=\"https://europa.eu/european-union/contact/write-to-us_lt\">kontaktine forma</a>"
 
-msgid "contact form"
-msgstr "kontaktine forma"
-
-msgid "https://europa.eu/european-union/contact/meet-us_en"
-msgstr "https://europa.eu/european-union/contact/meet-us_lt"
-
-msgid "local EU office"
-msgstr "vietiniame ES biure"
+msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
+msgstr "Susitikite su mumis <a href=\"https://europa.eu/european-union/contact/meet-us_lt\">vietiniame ES biure</a>"
 
 msgid "Search for EU social media channels"
 msgstr "ES socialinės žiniasklaidos kanalai"
