--- a/translations/oe_corporate_blocks-mt.po
+++ b/translations/oe_corporate_blocks-mt.po
@@ -1,23 +1,17 @@
 msgid ""
 msgstr ""
 
-msgid "https://europa.eu/european-union/contact/call-us_en"
-msgstr "https://europa.eu/european-union/contact/call-us_mt"
+msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
+msgstr "Ċemplilna <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
-msgid "telephone options"
-msgstr "telefoniċi oħra"
+msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
+msgstr "Uża alternattivi <a href=\"https://europa.eu/european-union/contact/call-us_mt\">telefoniċi oħra</a>"
 
-msgid "https://europa.eu/european-union/contact/write-to-us_en"
-msgstr "https://europa.eu/european-union/contact/write-to-us_mt"
+msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
+msgstr "Iltaqa’ magħna <a href=\"https://europa.eu/european-union/contact/write-to-us_mt\">f’uffiċċju lokali tal-UE</a>"
 
-msgid "contact form"
-msgstr "f’uffiċċju lokali tal-UE"
-
-msgid "https://europa.eu/european-union/contact/meet-us_en"
-msgstr "https://europa.eu/european-union/contact/meet-us_mt"
-
-msgid "local EU office"
-msgstr "tal-formola ta’ kuntatt tagħna"
+msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
+msgstr "Iktbilna permezz <a href=\"https://europa.eu/european-union/contact/meet-us_mt\">tal-formola ta’ kuntatt tagħna</a>"
 
 msgid "Search for EU social media channels"
 msgstr "Fittex kanali tal-midja soċjali tal-UE"
