--- a/translations/oe_corporate_blocks-pt-pt.po
+++ b/translations/oe_corporate_blocks-pt-pt.po
@@ -1,23 +1,17 @@
 msgid ""
 msgstr ""
 
-msgid "https://europa.eu/european-union/contact/call-us_en"
-msgstr "https://europa.eu/european-union/contact/call-us_pt"
+msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
+msgstr "Ligue para o <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
-msgid "telephone options"
-msgstr "números"
+msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
+msgstr "Use outros <a href=\"https://europa.eu/european-union/contact/call-us_pt\">números</a>"
 
-msgid "https://europa.eu/european-union/contact/write-to-us_en"
-msgstr "https://europa.eu/european-union/contact/write-to-us_pt"
+msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
+msgstr "Contacte-nos através do <a href=\"https://europa.eu/european-union/contact/write-to-us_pt\">formulário</a>"
 
-msgid "contact form"
-msgstr "formulário"
-
-msgid "https://europa.eu/european-union/contact/meet-us_en"
-msgstr "https://europa.eu/european-union/contact/meet-us_pt"
-
-msgid "local EU office"
-msgstr "gabinete local da UE"
+msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
+msgstr "Contacte-nos no <a href=\"https://europa.eu/european-union/contact/meet-us_pt\">gabinete local da UE</a>"
 
 msgid "Search for EU social media channels"
 msgstr "Procure as contas da UE nas redes sociais"
