--- a/translations/oe_corporate_blocks-sl.po
+++ b/translations/oe_corporate_blocks-sl.po
@@ -1,23 +1,17 @@
 msgid ""
 msgstr ""
 
-msgid "https://europa.eu/european-union/contact/call-us_en"
-msgstr "https://europa.eu/european-union/contact/call-us_sl"
+msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
+msgstr "Pokličite nas <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
-msgid "telephone options"
-msgstr "telefonske številke"
+msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
+msgstr "Pokličite druge <a href=\"https://europa.eu/european-union/contact/call-us_sl\">telefonske številke</a>"
 
-msgid "https://europa.eu/european-union/contact/write-to-us_en"
-msgstr "https://europa.eu/european-union/contact/write-to-us_sl"
+msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
+msgstr "Pišite nam s <a href=\"https://europa.eu/european-union/contact/write-to-us_sl\">kontaktnim obrazcem</a>"
 
-msgid "contact form"
-msgstr "kontaktnim obrazcem"
-
-msgid "https://europa.eu/european-union/contact/meet-us_en"
-msgstr "https://europa.eu/european-union/contact/meet-us_sl"
-
-msgid "local EU office"
-msgstr "lokalni pisarni EU"
+msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
+msgstr "Obiščite nas v <a href=\"https://europa.eu/european-union/contact/meet-us_sl\">lokalni pisarni EU</a>"
 
 msgid "Search for EU social media channels"
 msgstr "Poiščite nas na družbenih medijih EU"
