--- a/translations/oe_corporate_blocks-da.po
+++ b/translations/oe_corporate_blocks-da.po
@@ -1,23 +1,17 @@
 msgid ""
 msgstr ""
 
-msgid "https://europa.eu/european-union/contact/call-us_en"
-msgstr "https://europa.eu/european-union/contact/call-us_da"
+msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
+msgstr "Ring til os på <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
-msgid "telephone options"
-msgstr "telefonhenvendelse"
+msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
+msgstr "Brug andre muligheder for <a href=\"https://europa.eu/european-union/contact/call-us_da\">telefonhenvendelse</a>"
 
-msgid "https://europa.eu/european-union/contact/write-to-us_en"
-msgstr "https://europa.eu/european-union/contact/write-to-us_da"
+msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
+msgstr "Skriv til os via <a href=\"https://europa.eu/european-union/contact/write-to-us_da\">kontaktformularen</a>"
 
-msgid "contact form"
-msgstr "kontaktformularen"
-
-msgid "https://europa.eu/european-union/contact/meet-us_en"
-msgstr "https://europa.eu/european-union/contact/meet-us_da"
-
-msgid "local EU office"
-msgstr "lokalt EU-kontor"
+msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
+msgstr "Mød os på et <a href=\"https://europa.eu/european-union/contact/meet-us_da\">lokalt EU-kontor</a>"
 
 msgid "Search for EU social media channels"
 msgstr "Find EU på de sociale medier"
