--- a/translations/oe_corporate_blocks-hu.po
+++ b/translations/oe_corporate_blocks-hu.po
@@ -1,23 +1,17 @@
 msgid ""
 msgstr ""
 
-msgid "https://europa.eu/european-union/contact/call-us_en"
-msgstr "https://europa.eu/european-union/contact/call-us_hu"
+msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
+msgstr "Hívjon minket! Telefonszámunk <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
-msgid "telephone options"
-msgstr "kapcsolatfelvételi lehetőség közül!"
+msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
+msgstr "Válasszon a többi telefonos <a href=\"https://europa.eu/european-union/contact/call-us_hu\">kapcsolatfelvételi lehetőség közül!</a>"
 
-msgid "https://europa.eu/european-union/contact/write-to-us_en"
-msgstr "https://europa.eu/european-union/contact/write-to-us_hu"
+msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
+msgstr "Írjon nekünk <a href=\"https://europa.eu/european-union/contact/write-to-us_hu\">kapcsolatfelvételi űrlapunk</a> kitöltésével!"
 
-msgid "contact form"
-msgstr "kapcsolatfelvételi űrlapunk"
-
-msgid "https://europa.eu/european-union/contact/meet-us_en"
-msgstr "https://europa.eu/european-union/contact/meet-us_hu"
-
-msgid "local EU office"
-msgstr "helyi irodáink"
+msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
+msgstr "Jöjjön el személyesen <a href=\"https://europa.eu/european-union/contact/meet-us_hu\">helyi irodáink</a> valamelyikébe!"
 
 msgid "Search for EU social media channels"
 msgstr "Kövesse az EU közösségi oldalait"
