--- a/translations/oe_corporate_blocks-pl.po
+++ b/translations/oe_corporate_blocks-pl.po
@@ -1,23 +1,17 @@
 msgid ""
 msgstr ""
 
-msgid "https://europa.eu/european-union/contact/call-us_en"
-msgstr "https://europa.eu/european-union/contact/call-us_pl"
+msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
+msgstr "Zadzwoń do nas pod numer <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
-msgid "telephone options"
-msgstr "kontaktu telefonicznego"
+msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
+msgstr "Skorzystaj z innych form <a href=\"https://europa.eu/european-union/contact/call-us_pl\">kontaktu telefonicznego</a>"
 
-msgid "https://europa.eu/european-union/contact/write-to-us_en"
-msgstr "https://europa.eu/european-union/contact/write-to-us_pl"
+msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
+msgstr "Napisz do nas, <a href=\"https://europa.eu/european-union/contact/write-to-us_pl\">korzystając z formularza</a>"
 
-msgid "contact form"
-msgstr "korzystając z formularza"
-
-msgid "https://europa.eu/european-union/contact/meet-us_en"
-msgstr "https://europa.eu/european-union/contact/meet-us_pl"
-
-msgid "local EU office"
-msgstr "w lokalnym biurze UE"
+msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
+msgstr "Spotkaj się z nami <a href=\"https://europa.eu/european-union/contact/meet-us_pl\">w lokalnym biurze UE</a>"
 
 msgid "Search for EU social media channels"
 msgstr "Na profilu UE w mediach społecznościowych"
