--- a/translations/oe_corporate_blocks-ro.po
+++ b/translations/oe_corporate_blocks-ro.po
@@ -1,23 +1,17 @@
 msgid ""
 msgstr ""
 
-msgid "https://europa.eu/european-union/contact/call-us_en"
-msgstr "https://europa.eu/european-union/contact/call-us_ro"
+msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
+msgstr "Apelați numărul <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
-msgid "telephone options"
-msgstr "opțiuni telefonice"
+msgid "Use other <a href=\"https://europa.eu/european-union/contact/call-us_en\">telephone options</a>"
+msgstr "Utilizați alte <a href=\"https://europa.eu/european-union/contact/call-us_ro\">opțiuni telefonice</a>"
 
-msgid "https://europa.eu/european-union/contact/write-to-us_en"
-msgstr "https://europa.eu/european-union/contact/write-to-us_ro"
+msgid "Write to us via our <a href=\"https://europa.eu/european-union/contact/write-to-us_en\">contact form</a>"
+msgstr "Scrieți-ne completând <a href=\"https://europa.eu/european-union/contact/write-to-us_ro\">formularul de contact</a>"
 
-msgid "contact form"
-msgstr "formularul de contact"
-
-msgid "https://europa.eu/european-union/contact/meet-us_en"
-msgstr "https://europa.eu/european-union/contact/meet-us_ro"
-
-msgid "local EU office"
-msgstr "local al UE"
+msgid "Meet us at a <a href=\"https://europa.eu/european-union/contact/meet-us_en\">local EU office</a>"
+msgstr "Veniți într-un birou <a href=\"https://europa.eu/european-union/contact/meet-us_ro\">local al UE</a>"
 
 msgid "Search for EU social media channels"
 msgstr "Căutați canalele UE pe rețelele sociale"
