--- a/translations/oe_corporate_blocks-es.po
+++ b/translations/oe_corporate_blocks-es.po
@@ -1,6 +1,15 @@
 msgid ""
 msgstr ""
 
+msgid "Contact the EU"
+msgstr "Contactar con la UE"
+
+msgid "Find a social media account"
+msgstr "Cuentas en las redes sociales"
+
+msgid "EU institutions"
+msgstr "Instituciones de la UE"
+
 msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 msgstr "Llámenos al <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
