--- a/translations/oe_corporate_blocks-fi.po
+++ b/translations/oe_corporate_blocks-fi.po
@@ -1,6 +1,15 @@
 msgid ""
 msgstr ""
 
+msgid "Contact the EU"
+msgstr "Ota yhteyttä EU:hun"
+
+msgid "Find a social media account"
+msgstr "Sosiaalinen media"
+
+msgid "EU institutions"
+msgstr "EU:n toimielimet"
+
 msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 msgstr "Soita numeroon <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
