--- a/translations/oe_corporate_blocks-sk.po
+++ b/translations/oe_corporate_blocks-sk.po
@@ -1,6 +1,15 @@
 msgid ""
 msgstr ""
 
+msgid "Contact the EU"
+msgstr "Kontaktujte EÚ"
+
+msgid "Find a social media account"
+msgstr "Vyhľadať účet na sociálnych médiách"
+
+msgid "EU institutions"
+msgstr "Inštitúcie EÚ"
+
 msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 msgstr "Volajte nám na číslo <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
