--- a/translations/oe_corporate_blocks-cs.po
+++ b/translations/oe_corporate_blocks-cs.po
@@ -1,6 +1,15 @@
 msgid ""
 msgstr ""
 
+msgid "Contact the EU"
+msgstr "Jak kontaktovat EU"
+
+msgid "Find a social media account"
+msgstr "Vyhledat účet na sociálních médiích"
+
+msgid "EU institutions"
+msgstr "Orgány EU"
+
 msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 msgstr "Zavolejte nám na linku <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
