--- a/translations/oe_corporate_blocks-da.po
+++ b/translations/oe_corporate_blocks-da.po
@@ -1,6 +1,15 @@
 msgid ""
 msgstr ""
 
+msgid "Contact the EU"
+msgstr "Kontakt EU"
+
+msgid "Find a social media account"
+msgstr "Find en konto på de sociale medier"
+
+msgid "EU institutions"
+msgstr "Kontakt EU"
+
 msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 msgstr "Ring til os på <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
