--- a/translations/oe_corporate_blocks-fr.po
+++ b/translations/oe_corporate_blocks-fr.po
@@ -1,6 +1,15 @@
 msgid ""
 msgstr ""
 
+msgid "Contact the EU"
+msgstr "Contacter l'UE"
+
+msgid "Find a social media account"
+msgstr "Réseaux sociaux: trouver un compte"
+
+msgid "EU institutions"
+msgstr "Institutions de l’UE"
+
 msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 msgstr "Appelez-nous au <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
