--- a/translations/oe_corporate_blocks-hu.po
+++ b/translations/oe_corporate_blocks-hu.po
@@ -1,6 +1,15 @@
 msgid ""
 msgstr ""
 
+msgid "Contact the EU"
+msgstr "Kapcsolatfelvétel"
+
+msgid "Find a social media account"
+msgstr "Az EU intézményei, szervei és ügynökségei a közösségi oldalakon"
+
+msgid "EU institutions"
+msgstr "Uniós intézmények"
+
 msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 msgstr "Hívjon minket! Telefonszámunk <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
