--- a/translations/oe_corporate_blocks-lv.po
+++ b/translations/oe_corporate_blocks-lv.po
@@ -1,6 +1,15 @@
 msgid ""
 msgstr ""
 
+msgid "Contact the EU"
+msgstr "Kā sazināties ar ES"
+
+msgid "Find a social media account"
+msgstr "Atrast sociālo tīklu kontu"
+
+msgid "EU institutions"
+msgstr "ES iestādes"
+
 msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 msgstr "Zvaniet mums <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
