--- a/translations/oe_corporate_blocks-mt.po
+++ b/translations/oe_corporate_blocks-mt.po
@@ -1,6 +1,15 @@
 msgid ""
 msgstr ""
 
+msgid "Contact the EU"
+msgstr "Ikkuntattja lill-UE"
+
+msgid "Find a social media account"
+msgstr "Sib kont ta' midja soċjali"
+
+msgid "EU institutions"
+msgstr "Istituzzjonijiet tal-UE"
+
 msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 msgstr "Ċemplilna <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
