--- a/translations/oe_corporate_blocks-pl.po
+++ b/translations/oe_corporate_blocks-pl.po
@@ -1,6 +1,15 @@
 msgid ""
 msgstr ""
 
+msgid "Contact the EU"
+msgstr "Kontakt"
+
+msgid "Find a social media account"
+msgstr "Znajdź UE w serwisach społecznościowych"
+
+msgid "EU institutions"
+msgstr "Instytucje UE"
+
 msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 msgstr "Zadzwoń do nas pod numer <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
