--- a/translations/oe_corporate_blocks-pt-pt.po
+++ b/translations/oe_corporate_blocks-pt-pt.po
@@ -1,6 +1,15 @@
 msgid ""
 msgstr ""
 
+msgid "Contact the EU"
+msgstr "Contacte a UE"
+
+msgid "Find a social media account"
+msgstr "A UE nas redes sociais"
+
+msgid "EU institutions"
+msgstr "Instituições da UE"
+
 msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 msgstr "Ligue para o <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
