--- a/translations/oe_corporate_blocks-sl.po
+++ b/translations/oe_corporate_blocks-sl.po
@@ -1,6 +1,15 @@
 msgid ""
 msgstr ""
 
+msgid "Contact the EU"
+msgstr "Kontaktirajte EU"
+
+msgid "Find a social media account"
+msgstr "Naše strani na družbenih omrežjih"
+
+msgid "EU institutions"
+msgstr "Institucije EU"
+
 msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 msgstr "Pokličite nas <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
