--- a/translations/oe_corporate_blocks-sv.po
+++ b/translations/oe_corporate_blocks-sv.po
@@ -1,6 +1,15 @@
 msgid ""
 msgstr ""
 
+msgid "Contact the EU"
+msgstr "Kontakta EU"
+
+msgid "Find a social media account"
+msgstr "Hitta ett konto på sociala medier"
+
+msgid "EU institutions"
+msgstr "EU-institutionerna"
+
 msgid "Call us <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 msgstr "Ring <a href=\"tel:0080067891011\">00 800 6 7 8 9 10 11</a>"
 
