--- a/translations/oe_corporate_blocks-lv.po
+++ b/translations/oe_corporate_blocks-lv.po
@@ -113,7 +113,7 @@ msgid "/european-union/abouteuropa_en"
 msgstr "/european-union/abouteuropa_lv"
 
 msgid "Language policy"
-msgstr "valodu politika"
+msgstr "Valodu politika"
 
 msgid "/european-union/abouteuropa/language-policy_en"
 msgstr "/european-union/abouteuropa/language-policy_lv"
@@ -170,13 +170,13 @@ msgid "About the Commission's new web presence"
 msgstr "Par Komisijas jauno tīmekļa vietni"
 
 msgid "https://ec.europa.eu/info/language-policy_en"
-msgstr "http://ec.europa.eu/info/resources-partners_lv"
-
-msgid "https://ec.europa.eu/info/resources-partners_en"
 msgstr "https://ec.europa.eu/info/language-policy_lv"
 
+msgid "https://ec.europa.eu/info/resources-partners_en"
+msgstr "http://ec.europa.eu/info/resources-partners_lv"
+
 msgid "Resources for partners"
-msgstr "Valodu politika"
+msgstr "Resursi partneriem"
 
 msgid "https://ec.europa.eu/info/cookies_en"
 msgstr "https://ec.europa.eu/info/cookies_lv"
